# gemican

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  THANKS  pyproject.toml  setup.py  tasks.py  tox.ini
docs/: gemicanconf.py
docs/content/pages/: changelog.md  content.md  contribute.md  faq.md  gemican-themes.md  importer.md  install.md  internals.md  intro.gmi  plugins.md  publish.md  quickstart.md  report.md  settings.md  themes.md  tips.md
gemican/: contents.py  generators.py  readers.py  rstdirectives.py  server.py  settings.py  utils.py
gemican/tests/: test_cache.py  test_contents.py  test_generators.py  test_readers.py  test_rstdirectives.py  test_utils.py
gemican/tests/content/: article_with_markdown_extension.gemini  article_with_mdown_extension.gemini  article_with_mkd_extension.gmi
gemican/tests/output/basic/: archives.gmi  article-3.gmi  authors.gmi  categories.gmi  index.gmi  markdowns-back.gmi  oh-yeah.gmi  tags.gmi  unbelievable.gmi
gemican/tests/output/custom/: archives.gmi  article-2.gmi  authors.gmi  categories.gmi  filename_metadata-example.gmi  index.gmi  index2.gmi  index3.gmi  jinja2_template.gmi  markdowns-back.gmi  oh-yeah-fr.gmi  oh-yeah.gmi  second-article-fr.gmi  second-article.gmi  tags.gmi  this-is-a-super-article.gmi  unbelievable.gmi
gemican/tests/output/custom_locale/: archives.gmi  authors.gmi  categories.gmi  index.gmi  (+5 more)
gemican/tools/: gemican_quickstart.py  gemican_themes.py
gemican/tools/templates/: Makefile.jinja2  pelicanconf.py.jinja2  tasks.py.jinja2
pelican/: __init__.py  contents.py  generators.py  readers.py  server.py  settings.py  utils.py
pelican/tests/: test_cache.py  test_contents.py  test_generators.py  test_importer.py  test_pelican.py  test_readers.py  test_utils.py
pelican/tests/TestPages/: draft_page_markdown.gmi  hidden_page_markdown.gmi  page_markdown.gmi
pelican/tests/content/: article_with_duplicate_tags_authors.gmi  article_with_markdown_extension.gemini  article_with_mdown_extension.gemini  article_with_mkd_extension.gmi
samples/: gemican.conf.py  gemican.conf_FR.py
samples/content/: 2012-11-30_filename-metadata.gmi  another_super_article-fr.gmi  another_super_article.gmi  article2-fr.gmi  article2.gmi  article_tag_baz.gmi  draft_article without_date.gmi  draft_article.gmi  markdown.md  super_article.gmi  unbelievable.gmi
samples/content/cat1/: article1.gmi  article2.gmi  article3.gmi  markdown-article.gmi
samples/content/pages/: hidden_page.gmi  jinja2_template.gmi  override_tag_oh.gmi  override_url_saveas.gmi  test_page.gmi
(+157 files in other folders)
