[tool.poetry]
name = "gemican"
version = "0.1.0"
description = "Static gemini capsule generator supporting Markdown and reStructuredText"
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]
license = "AGPLv3"
readme = "README.rst"
keywords = ["static site generator", "static sites", "ssg"]

repository = "https://github.com/khoulihan/gemican"
documentation = "https://docs.getpelican.com"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: GemText",
]

[tool.poetry.urls]
"Tracker" = "https://github.com/khoulihan/gemican/issues"

[tool.poetry.dependencies]
python = "^3.6.7"
blinker = ">=1.4"
docutils = ">=0.16"
feedgenerator = ">=1.9"
jinja2 = ">=2.7"
pygments = ">=2.6"
python-dateutil = ">=2.8"
pytz = ">=2020.1"
rich = ">=10.1"
unidecode = ">=1.1"
markdown = {version = ">=3.1", optional = true}
Twisted = "^21.7.0"
pyOpenSSL = "^20.0.1"
service-identity = "^21.1.0"
python-magic = "^0.4.24"

[tool.poetry.dev-dependencies]
BeautifulSoup4 = "^4.9"
jinja2 = "~2.11"
lxml = "^4.3"
markdown = "~3.3.4"
typogrify = "^2.0"
sphinx = "^3.0"
sphinx_rtd_theme = "^0.5"
livereload = "^2.6"
psutil = {version = "^5.7", optional = true}
pygments = "~2.8"
pytest = "^6.0"
pytest-cov = "^2.8"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.0"
tox = {version = "^3.13", optional = true}
flake8 = "^3.8"
flake8-import-order = "^0.18.1"
invoke = "^1.3"
isort = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.extras]
markdown = ["markdown"]

[tool.poetry.scripts]
gemican = "gemican.__main__:main"
gemican-import = "gemican.tools.gemican_import:main"
gemican-plugins = "gemican.plugins._utils:list_plugins"
gemican-quickstart = "gemican.tools.gemican_quickstart:main"
gemican-themes = "gemican.tools.pelican_themes:main"

[tool.autopub]
project-name = "Gemican"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
changelog-file = "docs/changelog.rst"
changelog-header = "###############"
version-header = "="
version-strings = ["setup.py"]
build-system = "setuptools"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
